src/common/less/modals.less
// Modal styles
#Modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 3;
  background: rgba(0,0,0,.25);
  display: table;

  .inner {
    display: table-cell;
    vertical-align: middle;
  }

  .dialog {
    position: relative;
    background: @medium;
    width: 400px;
    margin: auto;
    box-sizing: border-box;
    border: 1px solid @dark;
  }

  .dialog:before {
    position: absolute;
    content: "";
    top: -2px;
    right: -2px;
    bottom: -2px;
    left: -2px;
    border-top: 1px solid #3a3a3a;
    border-left: 1px solid #3a3a3a;
    pointer-events: none;
  }

  .dialog:after {
    position: absolute;
    content: "";
    top: -2px;
    right: -2px;
    bottom: -2px;
    left: -2px;
    border-right: 1px solid #3a3a3a;
    border-bottom: 1px solid #3a3a3a;
    pointer-events: none;
  }

  .title {
    height: 20px;
    line-height: 20px;
    padding-left: 10px;
    border-bottom: 1px solid @dark;
    .gradient;
  }

  .text {
    margin: 10px;

    li {
      line-height: 200%;
    }

    label {
      margin-right: 5px;
      width: 6em;
      display: inline-block;
    }

    input[type=number] {
      position: relative;
      top: 1px;
      margin: 0 5px;
    }
  }

  .actions {
    text-align: right;
    padding: 0 10px 10px 10px;

    button {
      margin-left: 2px;
    }
  }

  // special styles for different modals
  .frame-size {
    width: 277px;
    float: left;
    margin: 0;
  }

  .frame-grid {
    width: 100px;
    height: 100px;
    border-collapse: collapse;
    margin-top: 10px;

    td {
      border: 1px solid lighten(@light, 10%);
    }
  }

  #image-import-dropzone {
    border: 1px solid red;
  }
} // #Modal


#ScreenBlocker {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, .5);
  z-index: 4;
  text-align: center;
  transform-style: preserve-3d;
  display: none;

  &>div {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
  }
}

